# briefxai

./: .dockerignore  .env.example  .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.clean  Dockerfile.python  LICENSE  MIGRATION_STATUS.md  PROJECT_STRUCTURE.md  README.md  RUST_DEPRECATION_NOTICE.md  briefxai  clippy.toml  cloudbuild-clean.yaml  cloudbuild.yaml  demo.sh  deploy-cloud-run-free-tier.md  deploy-steps.md  fix_critical_issues.sh  realistic_conversations.json  rustfmt.toml  test_basic.rs  test_e2e.sh  view_examples.html
assets/: clean_ui.html  clio_features.js  clio_ui.html  enhanced_ui.html  interactive_ui.css  interactive_ui.html  interactive_ui.js
benches/: performance.rs
briefxai_ui_data/: clio.html  dashboard.html  dynamic-loader.html  index.html  onboarding.html  progressive-disclosure.html
briefxai_ui_data/static/: app.js  clio-viz.js  clio.css  dashboard.css  dashboard.js  dynamic-loader.css  dynamic-loader.js  onboarding.css  progressive-disclosure.css  progressive-disclosure.js  style.css
docs/: advanced-features.md  api.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  implementation-plan.md  implementation-summary.md  production-features.md  quickstart.md
migrations/: 001_initial_schema.sql
openclio_ui_data/: index.html
python/: README.md  app.py  cli.py  cli_simple.py  requirements.txt  setup.py  test_data.json  test_data2.json
python/briefx/: __init__.py  config.py  examples.py  monitoring.py  utils.py
python/briefx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/: test_api.py  test_briefx.py  test_broken_features.py  test_complete.py  test_examples.json  test_updated.py
scripts/: coverage.sh  lint.sh  quality_check.sh  test_runner.sh
sessions/: cli_provider_test.json  cli_session_test.json
src/: __init__.py  analysis_integration.rs  clio_api.rs  clio_core.rs  clustering.rs  config.rs  embeddings.rs  error.rs  error_recovery.py  error_recovery.rs  examples.rs  facets.rs  lib.rs  llm.rs  logging.rs  main.rs  monitoring.rs  persistence.rs  persistence_v2.rs  prompts.rs  types.rs  types_extended.rs  umap.rs  utils.py  utils.rs  web.rs  web_clio.rs
src/analysis/: clio.py  clustering.py  pipeline.py  session_manager.rs  streaming.rs
src/data/: __init__.py  parsers.py
src/discovery/: serendipitous.rs
src/investigation/: targeted_search.rs
src/llm/: provider_manager.rs
templates/: index.html  visualization.html
tests/: integration_comprehensive.rs  property_based_tests.proptest-regressions  property_based_tests.rs  test_clio_features.rs  test_preprocessing.rs  test_session_manager.rs
ui/: index.html
(+38 files in other folders)
