[package]
name = "briefxai"
version = "2.0.0"
edition = "2021"
authors = ["BriefXAI Contributors"]
description = "Advanced AI conversation analysis platform for extracting insights and patterns at scale"
license = "MIT"
repository = "https://github.com/briefxai/briefxai"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.14"

# Data processing
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-stats = "0.5"
polars = { version = "0.36", features = ["lazy", "json", "parquet"] }

# Machine learning
linfa = "0.7"
linfa-clustering = "0.7"
linfa-reduction = "0.7"
linfa-nn = "0.7"
smartcore = "0.3"

# Web server and HTML generation
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
askama = { version = "0.12", features = ["serde-json"] }
minijinja = "2.0"

# WebSocket for real-time updates
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
async-trait = "0.1"

# Ollama integration
ollama-rs = "0.2"

# Utilities
rayon = "1.7"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.0"
lz4 = "1.24"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
rand_xoshiro = "0.6"
regex = "1.9"
once_cell = "1.18"
lazy_static = "1.4"
webbrowser = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

# Embedding models
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.15"
hf-hub = "0.3"

# Database for persistence
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json", "chrono", "uuid"] }
tiktoken-rs = "0.7.0"
unicode-normalization = "0.1.24"

# Monitoring and observability
opentelemetry = "0.20"
opentelemetry-prometheus = "0.13"
sysinfo = "0.29"

# Additional testing dependencies
proptest = "1.4"
quickcheck = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
mockito = "1.2"
pretty_assertions = "1.4"
tokio-test = "0.4"
proptest = "1.4"
quickcheck = "1.0"

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
